resources/css/post.css
/* ARTISTS VIEW */
.artist-menu {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 10px;
    justify-content: center;
}

.artist-item {
    /* background-color: rgb(63, 80, 132); */
    min-width: fit-content;
    height: 35px;
    display: flex;
    justify-content: center;
    padding: 0px 5px 0px 5px;
}

.artist-char {
    /* background-color: rgba(0, 0, 0, 0.372); */
    color: bisque;
    text-align: start;
}

.artist-link {
    text-decoration: none;
    color: bisque;
    font-size: 24px;
    transform: scale(1);
    transition: ease-in-out;
    transition-duration: 150ms;
}

.artist-link:hover {
    transform: scale(1.5);
    text-shadow: 2px 2px 10px rgb(143, 143, 16);
}

.artist-list {
    /* display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    justify-items: center; */
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    -webkit-box-pack: start;
    justify-content: flex-start;
    justify-items: flex-start;
    gap: 16px;
}

.artist-list-item {
    text-decoration: none;
    /* background-color: rgba(255, 255, 255, 0.188); */
    width: fit-content;
    padding: 3px;
    font-size: 24px;
}

div.artist-list-item>a {
    color: rgb(204, 190, 135);
}

/* -----------POST VIEW -----------*/
.banner-anime {
    height: 300px;
    width: 100%;
    background-color: rgb(52, 123, 99);
    border-radius: 5px;
    /* margin: 1%; */
    background-size: cover;
    background-position: center;
    position: relative;
    display: flex;
}

.gradient {
    background-image: linear-gradient(to top, #000000, #00000000);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border-radius: inherit;
}


.post-info {
    position: relative;
    z-index: 1;
    display: flex;
    flex-direction: row;
    /* gap: 20px;  */
    color: #ffffff;
    align-items: self-end;
}

.thumbnail-post {
    width: auto;
    height: 260px;
    border-radius: 2%;
    position: relative;
    z-index: 1;
    margin: 20px;
}

.title-post {
    font-size: 24px;
    margin-bottom: 10px;
}

.post-data-anime {
    display: flex;
    flex-direction: column;
    align-self: self-end;
}

.description-post {
    max-height: 120px;
    overflow: scroll;
    background-color: rgba(255, 255, 255, 0.064);
    padding: 5px 10px 0px 10px;
    margin: 0px 20px 20px 0px;
    border-radius: 5px;
}

/* --------------------------------- */
.post-song {
    background-color: #0E3D5F;
    height: 100%;
    padding: 5px;
    margin: 10px 0px 5px 0px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    border-bottom: 5px;
    border-bottom-color: #3877A3;
    border-bottom-style: solid;
    border-radius: 5px;
    transform: scale(1);
    transition: all .15s ease-out;

}

.post-song:hover {
    transform: scale(1.015);
    transition: all .15s ease-out;
}

.container-songs {
    background-color: #00000075;
    padding-bottom: 10px;
    padding-top: 5px;
    border-radius: 5px;
}

.themes {
    margin-left: 0px;
    margin-right: 0px;
}

/* ----------------------------------- */
@media screen and (max-width: 1920px) {}

@media screen and (max-width: 1440px) {}

@media screen and (max-width: 1280px) {}

@media screen and (max-width: 992px) {}

@media screen and (max-width: 960px) {
    .title-post {
        font-size: 20px;
        margin: 0px 10px;
    }
}

@media screen and (max-width: 800px) {}

@media screen and (max-width: 768px) {
    .post-info {
        flex-direction: row;
        align-items: center;
    }

    .thumbnail-post {
        width: auto;
        height: 180px;
        margin: 10px;
    }
}

@media screen and (max-width: 600px) {
    .thumbnail-post {
        width: auto;
        height: 160px;
        margin: 10px;
    }

    .banner-anime {
        height: 100%;
    }

    .post-info {
        flex-direction: column;
        align-items: center;
    }

    .description-post {
        margin: 5px;
        display: flex;
        padding: 5px;
    }

    .title-post {
        font-size: 18px;
        margin: 0px 10px;
    }
}

@media screen and (max-width: 400px) {}

